@@ -77,7 +77,7 @@ Learn how to {uri-contribute}[contribute].
 
 == License
 
-Copyright &copy; 2019 Oracle and/or its associates. All rights reserved.
+Copyright &copy; 2019, 2021, Oracle and/or its associates.
 
 Licensed under the {uri-license}[Universal Permissive License 1.0] as shown at 
 {uri-canonical-license}[https://oss.oracle.com/licenses/upl].
