@@ -1,5 +1,59 @@
 # Terraform VCN for Oracle Cloud Infrastructure
 
+The [Terraform VCN][repo] for [Oracle Cloud Infrastructure][OCI] provides a reusable [Terraform][terraform] module that provisions a minimal VCN on OCI.
+
+It creates the following resources:
+
+* A VCN with customizable CIDR block
+* An optional internet gateway
+* An optional NAT gateway
+* An optional service gateway
+
+It also controls the Default Security List, with a *Lockdown mode* that can be enabled or disabled.
+
+This module is primarily meant to be reusable to create more advanced infrastructure on [OCI][OCI] either manually in the OCI Console or by extending the Terraform code.
+
+## [Documentation][docs]
+
+### [Pre-requisites][prerequisites]
+
+#### Instructions
+
+* [Quickstart][quickstart]
+* [Reusing as a Terraform module][reuse]
+* [Terraform Options][terraform_options]
+
+## Related Documentation, Blog
+
+* [Oracle Cloud Infrastructure Documentation][oci_documentation]
+* [Terraform OCI Provider Documentation][terraform_oci]
+* [Erik Berg on Networks, Subnets and CIDR][subnets]
+* [Lisa Hagemann on Terraform cidrsubnet Deconstructed][terraform_cidr_subnet]
+
+## Projects using this module
+
+## Changelog
+
+View the [CHANGELOG][changelog].
+
+## Acknowledgement
+
+Code derived and adapted from [Terraform OCI Examples][terraform_oci_examples] and Hashicorp's [Terraform 0.12 examples][terraform_oci_examples]
+
+## Contributors
+
+[Folks who contributed with explanations, code, feedback, ideas, testing etc.][contributors]
+
+Learn how to [contribute][contributing].
+
+## License
+
+Copyright (c) 2019, 2021 Oracle and/or its associates.
+
+Licensed under the [Universal Permissive License 1.0][license] as shown at
+[https://oss.oracle.com/licenses/upl][canonical_license].
+
+<!-- Links reference section -->
 [changelog]: https://github.com/oracle-terraform-modules/terraform-oci-vcn/blob/master/CHANGELOG.adoc
 [contributing]: https://github.com/oracle-terraform-modules/terraform-oci-vcn/blob/master/CONTRIBUTING.adoc
 [contributors]: https://github.com/oracle-terraform-modules/terraform-oci-vcn/blob/master/CONTRIBUTORS.adoc
@@ -25,52 +79,4 @@
 [terraform_options]: https://github.com/oracle-terraform-modules/terraform-oci-vcn/blob/master/docs/terraformoptions.adoc
 [terraform_oci_examples]: https://github.com/terraform-providers/terraform-provider-oci/tree/master/examples
 [terraform_oci_oke]: https://github.com/oracle-terraform-modules/terraform-oci-oke
-
-The [Terraform VCN][repo] for [Oracle Cloud Infrastructure][OCI] provides a reusable [Terraform][terraform] module that provisions a minimal VCN on OCI.
-
-It creates the following resources:
-
-* A VCN with customizable CIDR block
-* An optional internet gateway
-* An optional NAT gateway
-* An optional service gateway
-
-This module is primarily meant to be reusable to create more advanced infrastructure on {uri-oci}[OCI] either manually in the OCI Console or by extending the Terraform code.
-
-## [Documentation][docs]
-
-### [Pre-requisites][prerequisites]
-
-#### Instructions
-- [Quickstart][quickstart]
-- [Reusing as a Terraform module][reuse]
-- [Terraform Options][terraform_options]
-
-## Related Documentation, Blog
-- [Oracle Cloud Infrastructure Documentation][oci_documentation]
-- [Terraform OCI Provider Documentation][terraform_oci]
-- [Erik Berg on Networks, Subnets and CIDR][subnets]
-- [Lisa Hagemann on Terraform cidrsubnet Deconstructed][terraform_cidr_subnet]
-
-## Projects using this module
-
-## Changelog
-
-View the [CHANGELOG][changelog].
-
-## Acknowledgement
-
-Code derived and adapted from [Terraform OCI Examples][terraform_oci_examples] and Hashicorp's [Terraform 0.12 examples][terraform_oci_examples]
-
-## Contributors
-
-[Folks who contributed with explanations, code, feedback, ideas, testing etc.][contributors]
-
-Learn how to [contribute][contributing].
-
-## License
-
-Copyright (c) 2019, 2020 Oracle and/or its associates. All rights reserved.
-
-Licensed under the [Universal Permissive License 1.0][license] as shown at 
-[https://oss.oracle.com/licenses/upl][canonical_license].
+<!-- Links reference section -->
