@@ -9,6 +9,7 @@ The format is based on {uri-changelog}[Keep a Changelog].
 
 == unreleased
 * changed input region to be optional (fixes #18)
+* added a new parameter to lockdown the VCN Default Security List and option to revert to original state (fixes #22)
 
 == v1.0.3 (July 13,2020)
 
